Primer página de prueba

--- a/www/vistas/principal.html
+++ b/www/vistas/principal.html
@@ -12,6 +12,9 @@
   <meta name="author" content="Fernando Magrosoto Vásquez (@fmagrosoto)">
   <meta name="robots" content="index,follow">
   <meta http-equiv="cache-control" content="no-cache">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
+    integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -23,7 +26,10 @@
           Dolor amet illo tenetur doloribus dolorem ullam corporis?
           Eius odio minus quibusdam, exercitationem, dicta perspiciatis
           iusto vitae corrupti cumque fuga tenetur soluta!</p>
-        <a href="/" class="btn btn-primary">Refrescar la página</a>
+        <p>En el <code>HEAD</code> de la página hay un link de estilo de Font Awesome.</p>
+        <a href="/" class="btn btn-primary">
+          <i class="fas fa-check-circle"></i>&nbsp;
+          Refrescar la página</a>
       </div>
     </div>
   </div>
