Typescript otras mejoras

--- a/www/vistas/principal.html
+++ b/www/vistas/principal.html
@@ -12,9 +12,6 @@
   <meta name="author" content="Fernando Magrosoto Vásquez (@fmagrosoto)">
   <meta name="robots" content="index,follow">
   <meta http-equiv="cache-control" content="no-cache">
-  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"
-    integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ"
-    crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -28,13 +25,14 @@
           iusto vitae corrupti cumque fuga tenetur soluta!</p>
         <p>En el <code>HEAD</code> de la página hay un link de estilo de Font Awesome.</p>
         <a href="/" class="btn btn-primary">
-          <i class="fas fa-check-circle"></i>&nbsp;
+          <i class="fas fa-sync-alt"></i>&nbsp;
           Refrescar la página</a>
       </div>
     </div>
   </div>
 
   <script src="/js/bundle.js"></script>
+  <script src="/js/index.min.js"></script>
 </body>
 
 </html>
